# Django-React-Full-Stack-App

./: pyproject.toml
.choreo/: endpoints.yaml
backend/api/migrations/: 0001_initial.py
frontend/src/: App.jsx  api.js
frontend/src/components/: Form.jsx  LoadingIndicator.jsx  ProtectedRoute.jsx
